# playwright_python_BDD_framework

./: .env  .flake8  pyproject.toml  requirements.txt
.github/workflows/: manual.yml
UI_Elements/: __init__.py  button.py  dropdown.py  text_input.py
allure-report/: 24a7e1db-cc99-4f6e-9708-fe97d87dff04-result.json  64042d67-4db6-424b-8b10-ddde0e640ccc-attachment.webm
feature/: environment.py  variables.py
feature/form/: form.feature
feature/steps/: form.py
page_models/: basepage.py  formpage.py
